--- a/index.html
+++ b/index.html
@@ -1003,9 +1003,18 @@
 
           </div>
 
+
+
+
+
           <div class="main-wrapper-middle-new-publication">
             <!-- Dynamically generated publications -->
           </div>
+
+
+
+
+
 
           <!-- List of static publications to fill the page -->
 
@@ -1033,6 +1042,16 @@
               <p class="main-wrapper-middle-static-publication-reactions-item like background-on-hover"><img src="images/thumb-up.svg" alt="icon"> J'aime </p>
               <p class="main-wrapper-middle-static-publication-reactions-item comment background-on-hover"><img src="images/message-dots.svg" alt="icon"> Commenter </p>
               <p class="main-wrapper-middle-static-publication-reactions-item background-on-hover"><img src="images/share.svg" alt="icon"> Partager </p>
+            </div>
+
+            <div class="main-wrapper-middle-static-publication-written-comments-wrapper">
+              <div class="main-wrapper-middle-static-publication-written-comments">
+                <img src="images/profile-12.jpg" alt="profile pic" class="profile-pic">
+                <div class="main-wrapper-middle-static-publication-written-comments-text">
+                  <p class="written-comment-name">Kevin Phelps</p>
+                  <p class="written-comment-text">Trop drôle j'adore Caméra Café 🤣🤣</p>
+                </div>
+              </div>
             </div>
 
             <div class="main-wrapper-middle-static-publication-comment">
@@ -1075,6 +1094,10 @@
               <p class="main-wrapper-middle-static-publication-reactions-item background-on-hover"><img src="images/share.svg" alt="icon"> Partager </p>
             </div>
 
+            <div class="main-wrapper-middle-static-publication-written-comments-wrapper">
+
+            </div>
+
             <div class="main-wrapper-middle-static-publication-comment">
               <img src="images/profile-1.jpg" alt="profile pic" class="profile-pic">
               <input type="text" placeholder="Écrivez un commentaire..." class="comment-input">
@@ -1114,6 +1137,8 @@
               <p class="main-wrapper-middle-static-publication-reactions-item comment background-on-hover"><img src="images/message-dots.svg" alt="icon"> Commenter </p>
               <p class="main-wrapper-middle-static-publication-reactions-item background-on-hover"><img src="images/share.svg" alt="icon"> Partager </p>
             </div>
+
+            <div class="main-wrapper-middle-static-publication-written-comments-wrapper"></div>
 
             <div class="main-wrapper-middle-static-publication-comment">
               <img src="images/profile-1.jpg" alt="profile pic" class="profile-pic">
