--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -426,7 +426,7 @@
             <p class="notification-modal-time">Il y a 1 heure</p>
           </div>
           <img class="notification-modal-item-option" src="images/dots.svg" alt="dots">
-          <img class="notification-modal-bubble green" src="images/comments-white.svg">
+          <img class="notification-modal-bubble green" src="images/comments-white.svg" alt="icon">
         </div>
 
         <div class="notification-modal-item background-on-hover">
@@ -438,7 +438,7 @@
             <p class="notification-modal-time">Il y a 1 heure</p>
           </div>
           <img class="notification-modal-item-option" src="images/dots.svg" alt="dots">
-          <img class="notification-modal-bubble blue" src="images/comments-white.svg">
+          <img class="notification-modal-bubble blue" src="images/comments-white.svg" alt="icon">
         </div>
 
         <div class="notification-modal-item background-on-hover">
@@ -450,7 +450,7 @@
             <p class="notification-modal-time">Il y a 2 heures</p>
           </div>
           <img class="notification-modal-item-option" src="images/dots.svg" alt="dots">
-          <img class="notification-modal-bubble blue" src="images/comments-white.svg">
+          <img class="notification-modal-bubble blue" src="images/comments-white.svg" alt="icon">
         </div>
 
         <div class="notification-modal-item background-on-hover">
@@ -462,7 +462,7 @@
             <p class="notification-modal-time">Il y a 4 heures</p>
           </div>
           <img class="notification-modal-item-option" src="images/dots.svg" alt="dots">
-          <img class="notification-modal-bubble green" src="images/comments-white.svg">
+          <img class="notification-modal-bubble green" src="images/comments-white.svg" alt="icon">
         </div>
 
         <div class="notification-modal-item background-on-hover">
@@ -474,7 +474,7 @@
             <p class="notification-modal-time">Il y a 4 heures</p>
           </div>
           <img class="notification-modal-item-option" src="images/dots.svg" alt="dots">
-          <img class="notification-modal-bubble blue" src="images/like-white.svg">
+          <img class="notification-modal-bubble blue" src="images/like-white.svg" alt="icon">
         </div>
 
         <div class="notification-modal-item background-on-hover">
@@ -486,7 +486,7 @@
             <p class="notification-modal-time">Il y a 7 heures</p>
           </div>
           <img class="notification-modal-item-option" src="images/dots.svg" alt="dots">
-          <img class="notification-modal-bubble blue" src="images/comments-white.svg">
+          <img class="notification-modal-bubble blue" src="images/comments-white.svg" alt="icon">
         </div>
 
         <div class="notification-modal-item background-on-hover">
@@ -498,7 +498,7 @@
             <p class="notification-modal-time">Il y a 8 heures</p>
           </div>
           <img class="notification-modal-item-option" src="images/dots.svg" alt="dots">
-          <img class="notification-modal-bubble blue" src="images/like-white.svg">
+          <img class="notification-modal-bubble blue" src="images/like-white.svg" alt="icon">
         </div>
 
         <div class="notification-modal-item background-on-hover">
@@ -510,7 +510,7 @@
             <p class="notification-modal-time">Il y a 13 heures</p>
           </div>
           <img class="notification-modal-item-option" src="images/dots.svg" alt="dots">
-          <img class="notification-modal-bubble green" src="images/comments-white.svg">
+          <img class="notification-modal-bubble green" src="images/comments-white.svg" alt="icon">
         </div>
 
         <div class="notification-modal-item background-on-hover">
@@ -522,7 +522,7 @@
             <p class="notification-modal-time">Il y a un jour</p>
           </div>
           <img class="notification-modal-item-option" src="images/dots.svg" alt="dots">
-          <img class="notification-modal-bubble blue" src="images/like-white.svg">
+          <img class="notification-modal-bubble blue" src="images/like-white.svg" alt="icon">
         </div>
 
         <div class="notification-modal-item background-on-hover">
@@ -534,7 +534,7 @@
             <p class="notification-modal-time">Il y a un jour</p>
           </div>
           <img class="notification-modal-item-option" src="images/dots.svg" alt="dots">
-          <img class="notification-modal-bubble blue" src="images/comments-white.svg">
+          <img class="notification-modal-bubble blue" src="images/comments-white.svg" alt="icon">
         </div>
 
         <div class="notification-modal-item background-on-hover">
@@ -546,7 +546,7 @@
             <p class="notification-modal-time">Il y a 2 jours</p>
           </div>
           <img class="notification-modal-item-option" src="images/dots.svg" alt="dots">
-          <img class="notification-modal-bubble blue" src="images/comments-white.svg">
+          <img class="notification-modal-bubble blue" src="images/comments-white.svg" alt="icon">
         </div>   
       </div>
 
