--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <div class="navbar-icon">
           <img src="images/world.svg" alt="groups">
         </div>
+
+        <div class="navbar-icon mobile-menu" style="display: none">
+          <img src="images/menu-2.svg" alt="mobile menu">
+        </div>
       </div>
 
       <!-- Right part : Profile, notifications, messenger... -->
