fixed link to my new github username

--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
           <div class="main-wrapper-left-options-list">
             <div class="main-wrapper-left-options-list-option background-on-hover-darker">
               <img src="images/logo-github.svg" class="main-wrapper-left-options-icon" alt="menu icon">
-              <a href="https://github.com/PierreWagon" target="_blank"> <p>PierreWagon's Github</p> </a>
+              <a href="https://github.com/pierre-pellegrino" target="_blank"> <p>Mon Github</p> </a>
             </div>
           </div>
 
